--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 .resume-container{
   width: 100%;
   height: 720px;
-  margin-top: 185px;
+  margin-top: 255px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -139,6 +139,7 @@ nav ul li{
 nav ul li a{
   color : var(--primary_color4);
   text-decoration: none;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -173,5 +174,37 @@ nav a:hover{
   }
   100%{
     top: 5px;
+  }
+}
+
+@media only screen and (max-width:600px) {
+  .header-container{
+    flex-direction: column;
+  }
+  nav ul{
+    flex-direction: column;
+    text-align: center;
+  }
+  nav ul li{
+    display: block;
+    font-size: larger;
+    margin: .5em 0;
+  }
+  .animated-text{
+    font-size: 1.2rem;
+  }
+  .cursor{
+    margin-top: 1em;
+  }
+  .content-container{
+    min-height: 30vh;
+  }
+  .resume-container{
+    height: 960px;
+    margin-top: 20px;
+    justify-content: start;
+  }
+  .card{
+    width: 75%;
   }
 }
