--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html{
   scroll-behavior: smooth;
 }
 body::-webkit-scrollbar {
-  width: 12px;               /* width of the entire scrollbar */
+  width: 6px;               /* width of the entire scrollbar */
 }
 
 body::-webkit-scrollbar-track {
@@ -30,8 +30,8 @@ body {
 
   margin: 0;
   padding: 0;
-  min-height: 100vh;
   overflow-x: hidden;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -40,7 +40,10 @@ body {
     
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #072227;
   background-image: linear-gradient(to left,var(--primary_color1),#0d393f);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
